[gd_scene load_steps=7 format=2]

[ext_resource path="res://Asset/BG.png" type="Texture" id=1]
[ext_resource path="res://Script/Lvl1.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 366.422, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5469, 216 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14.5, 16.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 50.5, 28.0625 )

[node name="Lvl1" type="Node2D"]
script = ExtResource( 2 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1.46286, 1.5 )
texture = ExtResource( 1 )

[node name="Limits" type="StaticBody2D" parent="."]

[node name="Stairs" type="CollisionPolygon2D" parent="Limits"]
polygon = PoolVector2Array( 618, 582, 647, 562, 679, 562, 712, 583, 715, 584 )

[node name="Ground" type="CollisionShape2D" parent="Limits"]
position = Vector2( 520, 596 )
scale = Vector2( 1.46143, 1.5 )
shape = SubResource( 1 )

[node name="LeftWall" type="CollisionShape2D" parent="Limits"]
position = Vector2( -16.875, 296 )
scale = Vector2( 1.46143, 1.5 )
shape = SubResource( 2 )

[node name="RightWall" type="CollisionShape2D" parent="Limits"]
position = Vector2( 1040.75, 277 )
scale = Vector2( 1.46143, 1.5 )
shape = SubResource( 2 )

[node name="Hall" type="Area2D" parent="."]

[node name="Hall" type="CollisionShape2D" parent="Hall"]
position = Vector2( 663.5, 545 )
shape = SubResource( 5 )

[node name="Garage" type="Area2D" parent="."]

[node name="Garage" type="CollisionShape2D" parent="Garage"]
position = Vector2( 471.5, 549.938 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Hall" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Hall" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Garage" to="." method="_on_Garage_body_entered"]
[connection signal="body_exited" from="Garage" to="." method="_on_Garage_body_exited"]
